--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,88 @@
+arabic-reshaper==3.0.0
 asgiref==3.4.1
+asn1crypto==1.5.1
 certifi==2021.10.8
 cffi==1.15.0
+chardet==5.2.0
 charset-normalizer==2.0.7
+click==8.1.7
+colorama==0.4.6
 cryptography==35.0.0
+cssselect2==0.7.0
 defusedxml==0.7.1
+diff-match-patch==20230430
+distro==1.9.0
 Django==3.2.8
 django-allauth==0.45.0
+django-appconf==1.0.6
+django-ckeditor==6.7.1
+django-cpf-cnpj==1.0.0
 django-crispy-forms==1.13.0
+django-datatables-view==1.20.0
+django-import-export==3.3.6
+django-js-asset==2.2.0
+django-json-widget==2.0.1
+django-select2==8.1.2
+django-widget-tweaks==1.5.0
+docopt==0.6.2
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+html5lib==1.1
 idna==3.3
+iniconfig==2.0.0
+JPype1==1.5.0
+lxml==4.9.4
+MarkupPy==1.14
+num2words==0.5.13
+numpy==1.26.3
 oauthlib==3.1.1
+odfpy==1.4.1
+openpyxl==3.1.2
+oscrypto==1.3.0
+packaging==23.2
+pandas==2.2.0
+pdfminer.six==20221105
+pdfplumber==0.10.3
+pillow==10.2.0
+pluggy==1.4.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.20
+pyHanko==0.21.0
+pyhanko-certvalidator==0.26.3
 PyJWT==2.2.0
+PyNFe==0.4.4
+pyOpenSSL==23.3.0
+pypdf==4.0.0
+PyPDF2==3.0.1
+pypdfium2==4.26.0
+pypng==0.20220715.0
+pytest==8.1.1
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2021.3
+PyYAML==6.0.1
+qrcode==7.4.2
+reportlab==4.0.9
 requests==2.26.0
 requests-oauthlib==1.3.0
+signxml==3.2.1
+six==1.16.0
 sqlparse==0.4.2
+svglib==1.5.1
+tablib==3.5.0
+tinycss2==1.2.1
+tomli==2.0.1
+typing_extensions==4.9.0
+tzdata==2023.4
+tzlocal==5.2
+uritools==4.0.2
 urllib3==1.26.7
+webencodings==0.5.1
+xhtml2pdf==0.2.14
+xlrd==2.0.1
+xlwt==1.3.0
+xmltodict==0.13.0
